--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "bulma": "^0.9.3",
     "node-sass": "^7.0.1",
     "react": "^17.0.2",
+    "react-bootstrap": "^2.1.2",
     "react-dom": "^17.0.2",
+    "react-file-picker": "^0.0.6",
     "react-router-dom": "^5.2.0",
     "react-scripts": "5.0.0",
     "web-vitals": "^2.1.4"
